@@ -7,9 +7,21 @@ import java.util.Map;
 
 public class TechnicalDataAuxiliarySaveRequest {
   private Integer expectedVersion;
+  private String entryMode;
+  private String referenceMaterialNo;
+  private String referenceFingerprint;
+  private String fileSha256;
   private List<TechnicalDataAuxiliaryItemRequest> items;
   private final Map<String, Object> unknownFields = new LinkedHashMap<>();
 
+  public String getEntryMode() { return entryMode; }
+  public void setEntryMode(String value) { entryMode = value; }
+  public String getReferenceMaterialNo() { return referenceMaterialNo; }
+  public void setReferenceMaterialNo(String value) { referenceMaterialNo = value; }
+  public String getReferenceFingerprint() { return referenceFingerprint; }
+  public void setReferenceFingerprint(String value) { referenceFingerprint = value; }
+  public String getFileSha256() { return fileSha256; }
+  public void setFileSha256(String value) { fileSha256 = value; }
   public Integer getExpectedVersion() { return expectedVersion; }
   public void setExpectedVersion(Integer value) { expectedVersion = value; }
   public List<TechnicalDataAuxiliaryItemRequest> getItems() { return items; }
@@ -17,5 +29,5 @@ public class TechnicalDataAuxiliarySaveRequest {
 
   @JsonAnySetter
   public void addUnknownField(String name, Object value) { unknownFields.put(name, value); }
-  public Map<String, Object> getUnknownFields() { return Map.copyOf(unknownFields); }
+  public Map<String, Object> getUnknownFields() { return java.util.Collections.unmodifiableMap(unknownFields); }
 }
